--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Sample_MVVM</string>
+    <string name="app_name">sample_mvvm</string>
 
     <string name="tv_username_text" tools:ignore="ExtraTranslation">username</string>
 
